# csvm

./: .gitignore  README.md  pyproject.toml
.github/workflows/: checks.yml  publish.yml
src/csvm/: __init__.py  models.py  reader.py
tests/: test_reader.py
