[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "csvm"
version = "0.0.1"
description = ""
requires-python = ">=3.8"
readme = "README.md"
license.file = "LICENSE"
authors = [{ name = "Rafael Sanabria", email = "rafael.d.sanabria@gmail.com" }]
dependencies = []
classifiers = []
